# inter-message-poc

./: Cargo.toml
src/: main.rs
